--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server": "node ./config/server.js",
+        "server": "nodemon ./src/server/app.js",
         "start": "webpack-dev-server --inline"
     },
     "repository": {
@@ -36,6 +36,7 @@
         "html-webpack-plugin": "^3.2.0",
         "jshint": "^2.9.5",
         "koa": "^2.5.1",
+        "nodemon": "^1.17.5",
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
         "react-redux": "^5.0.7",
