--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "html-webpack-plugin": "^3.2.0",
         "jshint": "^2.9.5",
         "koa": "^2.5.1",
+        "koa-route": "^3.2.0",
+        "koa-router": "^7.4.0",
         "nodemon": "^1.17.5",
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
