--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-	"presets": ["env","react"],
-	"plugins": ["transform-async-to-generator"]
+  "presets": [[
+    "env", {
+      "targets": {
+        "node": "current"
+      }
+    }
+  ], "es2015", "react"],
+  "plugins": ["transform-async-to-generator", "transform-class-properties"]
 }
