--- a/package.json
+++ b/package.json
@@ -24,20 +24,29 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "webpack": "^4.10.2",
         "webpack-cli": "^3.0.1"
     },
     "dependencies": {
+        "@koa/cors": "^2.2.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "clean-webpack-plugin": "^0.1.19",
         "css-loader": "^0.28.11",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "jquery": "^3.3.1",
         "jshint": "^2.9.5",
         "koa": "^2.5.1",
+        "koa-bodyparser": "^4.2.1",
+        "koa-compose": "^4.1.0",
         "koa-route": "^3.2.0",
         "koa-router": "^7.4.0",
+        "koa-static": "^4.0.3",
         "nodemon": "^1.17.5",
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
