--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,18 @@
       }
     }
   ], "es2015", "react"],
-  "plugins": ["transform-async-to-generator", "transform-class-properties"]
+  "plugins": [
+    "transform-async-to-generator", 
+    "transform-class-properties",
+    ["transform-runtime"],
+    [
+      "import",
+      [
+        {
+          "style": "css",
+          "libraryName": "antd"
+        }
+      ]
+    ]
+  ]
 }
