--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server": "nodemon ./src/server/app.js",
-        "start": "webpack-dev-server --inline"
+        "start": "webpack-dev-server --inline",
+        "server": "npm run build:live",
+        "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/app.ts"
     },
     "repository": {
         "type": "git",
@@ -20,23 +21,33 @@
     },
     "homepage": "https://github.com/hellochenk/redux-is-funny#readme",
     "devDependencies": {
+        "awesome-typescript-loader": "^5.0.0",
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
+        "source-map-loader": "^0.2.3",
+        "ts-node": "^6.1.0",
+        "typescript": "^2.9.1",
         "webpack": "^4.10.2",
         "webpack-cli": "^3.0.1"
     },
     "dependencies": {
         "@koa/cors": "^2.2.1",
+        "@types/koa": "^2.0.46",
+        "antd": "^3.6.2",
+        "babel-plugin-import": "^1.7.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
+        "babel-runtime": "^6.26.0",
         "clean-webpack-plugin": "^0.1.19",
         "css-loader": "^0.28.11",
+        "csx": "^9.0.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.3.1",
@@ -47,6 +58,7 @@
         "koa-route": "^3.2.0",
         "koa-router": "^7.4.0",
         "koa-static": "^4.0.3",
+        "moment": "^2.22.2",
         "nodemon": "^1.17.5",
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
