--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/hellochenk/redux-is-funny#readme",
     "devDependencies": {
+        "@types/node": "^10.3.2",
         "awesome-typescript-loader": "^5.0.0",
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
@@ -39,6 +40,8 @@
     "dependencies": {
         "@koa/cors": "^2.2.1",
         "@types/koa": "^2.0.46",
+        "@types/koa-router": "^7.0.28",
+        "@types/sequelize": "^4.27.20",
         "antd": "^3.6.2",
         "babel-plugin-import": "^1.7.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
@@ -59,12 +62,14 @@
         "koa-router": "^7.4.0",
         "koa-static": "^4.0.3",
         "moment": "^2.22.2",
+        "mysql2": "^1.5.3",
         "nodemon": "^1.17.5",
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
         "react-redux": "^5.0.7",
         "redux": "^4.0.0",
         "request": "^2.999.1",
+        "sequelize": "^4.37.10",
         "style-loader": "^0.21.0",
         "uglifyjs-webpack-plugin": "^1.2.5",
         "useragent": "^2.3.0",
