--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,14 @@
         "node_modules/*",
         "@types/*"
       ]
-    }
+    },
+    "types": [
+      "node"
+    ],
+    "typeRoots": [
+      // add path to @types
+      "node_modules/@types"
+    ]
   },
   "include": [
     "./src/**/*"
