新增 koa2-cors 解决跨域

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "dependencies": {
         "@koa/cors": "^2.2.1",
         "@types/koa": "^2.0.46",
+        "@types/koa-logger": "^3.1.0",
         "@types/koa-router": "^7.0.28",
+        "@types/koa2-cors": "^2.0.1",
         "@types/sequelize": "^4.27.20",
         "antd": "^3.6.2",
         "babel-plugin-import": "^1.8.0",
@@ -58,9 +60,12 @@
         "koa": "^2.5.1",
         "koa-bodyparser": "^4.2.1",
         "koa-compose": "^4.1.0",
+        "koa-cors": "0.0.16",
+        "koa-logger": "^3.2.0",
         "koa-route": "^3.2.0",
         "koa-router": "^7.4.0",
         "koa-static": "^4.0.3",
+        "koa2-cors": "^2.0.5",
         "moment": "^2.22.2",
         "mysql2": "^1.5.3",
         "nodemon": "^1.17.5",
