--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@types/koa2-cors": "^2.0.1",
         "@types/sequelize": "^4.27.20",
         "antd": "^3.6.2",
+        "axios": "^0.18.0",
         "babel-plugin-import": "^1.8.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-es2015": "^6.24.1",
