--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
   "plugins": [
     "transform-async-to-generator", 
     "transform-class-properties",
+    ["transform-decorators-legacy"],
     ["transform-runtime"],
     [
       "import",
