--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --inline",
+        "start": "NODE_ENV=development webpack-dev-server --inline",
         "start-test": "webpack --watch",
         "server": "npm run build:live",
         "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/app.ts"
@@ -28,6 +28,7 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.7.0",
