--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/hellochenk/redux-is-funny.git"
+        "url": "git+https://github.com/hellochenk/js-is-funny.git"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/hellochenk/redux-is-funny/issues"
+        "url": "https://github.com/hellochenk/js-is-funny/issues"
     },
-    "homepage": "https://github.com/hellochenk/redux-is-funny#readme",
+    "homepage": "https://github.com/hellochenk/js-is-funny#readme",
     "devDependencies": {
         "@types/node": "^10.3.2",
         "awesome-typescript-loader": "^5.0.0",
@@ -76,7 +76,9 @@
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
         "react-redux": "^5.0.7",
+        "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
+        "redux-logger": "^3.0.6",
         "request": "^2.87.0",
         "sequelize": "^4.37.10",
         "style-loader": "^0.21.0",
