--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0",
         "request": "^2.87.0",
         "sequelize": "^4.37.10",
         "style-loader": "^0.21.0",
