引入 websocket 聊天室demo

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@types/koa-router": "^7.0.28",
         "@types/koa2-cors": "^2.0.1",
         "@types/sequelize": "^4.27.20",
+        "@types/socket.io": "^1.4.36",
         "antd": "^3.6.2",
         "axios": "^0.18.0",
         "babel-plugin-import": "^1.8.0",
@@ -83,6 +84,7 @@
         "redux-thunk": "^2.3.0",
         "request": "^2.87.0",
         "sequelize": "^4.37.10",
+        "socket.io": "^2.1.1",
         "style-loader": "^0.21.0",
         "uglifyjs-webpack-plugin": "^1.2.5",
         "useragent": "^2.3.0",
