--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
         "node": "current"
       }
     }
-  ], "es2015", "react"],
+  ], "es2015", "react", "stage-3"],
   "plugins": [
     "transform-async-to-generator", 
     "transform-class-properties",
