--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     "transform-class-properties",
     ["transform-decorators-legacy"],
     ["transform-runtime"],
+    ["syntax-dynamic-import"],
     [
       "import",
       [
