--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "cross-env NODE_ENV=development webpack-dev-server --inline",
         "start-test": "cross-env NODE_ENV=development webpack --watch",
         "server": "npm run build:live",
+        "build ": "webpack",
         "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/app.ts"
     },
     "repository": {
@@ -27,6 +28,7 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-transform-runtime": "^6.23.0",
@@ -56,6 +58,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babel-runtime": "^6.26.0",
+        "bluebird": "^3.5.1",
         "clean-webpack-plugin": "^0.1.19",
         "cross-env": "^5.2.0",
         "css-loader": "^0.28.11",
@@ -78,6 +81,7 @@
         "nodemon": "^1.17.5",
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
+        "react-loadable": "^5.4.0",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
