--- a/.babelrc
+++ b/.babelrc
@@ -9,9 +9,9 @@
   "plugins": [
     "transform-async-to-generator", 
     "transform-class-properties",
-    ["transform-decorators-legacy"],
-    ["transform-runtime"],
-    ["syntax-dynamic-import"],
+    "transform-decorators-legacy",
+    "transform-runtime",
+    "syntax-dynamic-import",
     [
       "import",
       [
