--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "koa-router": "^7.4.0",
         "koa-static": "^4.0.3",
         "koa2-cors": "^2.0.5",
+        "lodash": "^4.17.10",
         "moment": "^2.22.2",
         "mysql2": "^1.5.3",
         "nodemon": "^1.17.5",
@@ -89,6 +90,8 @@
         "redux-saga": "^0.16.0",
         "redux-thunk": "^2.3.0",
         "request": "^2.87.0",
+        "rxjs": "^6.2.2",
+        "rxjs-compat": "^6.2.2",
         "sequelize": "^4.37.10",
         "socket.io": "^2.1.1",
         "style-loader": "^0.21.0",
