--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "cross-env NODE_ENV=development webpack-dev-server --inline",
-        "st": "cross-env NODE_ENV=development webpack --watch",
+        "st": "cross-env NODE_ENV=development webpack",
         "server": "npm run build:live",
         "build ": "webpack",
-        "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/app.ts"
+        "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/app.ts",
+        "b": "webpack"
     },
     "repository": {
         "type": "git",
@@ -36,9 +37,10 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "source-map-loader": "^0.2.3",
-        "ts-node": "^6.1.1",
+        "ts-node": "^6.2.0",
         "typescript": "^2.9.1",
         "webpack": "^4.12.0",
+        "webpack-bundle-analyzer": "^2.13.1",
         "webpack-cli": "^3.0.4"
     },
     "dependencies": {
